add squirrel to product service
