# product/internal/api/grpc/dto/product.go
@@ -1,0 +1,9 @@
+package dto
+
+import "github.com/google/uuid"
+
+type SearchProductsDTO struct {
+	UserID     uuid.UUID
+	CategoryID int32
+	Moderated  bool
+}
